# ChangeLog for dev-java/icu4j
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/icu4j/ChangeLog,v 1.50 2010/08/01 13:50:58 hwoarang Exp $

  01 Aug 2010; Markos Chandras <hwoarang@gentoo.org> icu4j-4.4.1.1.ebuild:
  Stable on amd64 wrt bug #329867

  26 Jul 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org> icu4j-4.4.1.1.ebuild:
  x86 stable wrt bug #329867

*icu4j-4.4.1.1 (26 Jun 2010)

  26 Jun 2010; Petteri Räty <betelgeuse@gentoo.org> +icu4j-4.4.1.1.ebuild:
  Version bump. Reported in bug #325649.

  26 Jun 2010; Petteri Räty <betelgeuse@gentoo.org> -icu4j-4.2.ebuild,
  -icu4j-4.2.1.ebuild, -icu4j-4.4.ebuild:
  Remove old versions.

  15 Jun 2010; Christoph Mende <angelos@gentoo.org> icu4j-4.4.1.ebuild:
  Stable on amd64 wrt bug #321955

  09 Jun 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org> icu4j-4.4.1.ebuild:
  x86 stable wrt bug #321955

*icu4j-4.4.1 (29 Apr 2010)

  29 Apr 2010; Vlastimil Babka <caster@gentoo.org> +icu4j-4.4.1.ebuild:
  Version bump.

  24 Apr 2010; Fabian Groffen <grobian@gentoo.org> icu4j-3.8.1-r1.ebuild,
  icu4j-4.4.ebuild:
  Marked ~sparc-solaris ~x86-solaris, bug #314093

*icu4j-4.4 (14 Apr 2010)

  14 Apr 2010; Vlastimil Babka <caster@gentoo.org> +icu4j-4.4.ebuild:
  Version bump, bug #296767.

  14 Apr 2010; Vlastimil Babka <caster@gentoo.org> icu4j-4.2.1.1.ebuild:
  Stop restricting tests

*icu4j-4.2.1.1 (14 Apr 2010)

  14 Apr 2010; Vlastimil Babka <caster@gentoo.org> +icu4j-4.2.1.1.ebuild:
  Version bump, bug #296767.

*icu4j-4.2.1 (13 Apr 2010)

  13 Apr 2010; Vlastimil Babka <caster@gentoo.org> +icu4j-4.2.1.ebuild:
  Version bump, bug #296767.

  13 Apr 2010; Christian Faulhammer <fauli@gentoo.org> icu4j-4.0.1.1.ebuild:
  stable x86, bug 310181

  12 Apr 2010; Vlastimil Babka <caster@gentoo.org> icu4j-4.0.1.1.ebuild,
  icu4j-4.2.ebuild:
  Remove the BigDecimal test as it fails with icedtea and probably relies
  too much on internal representation. Bug #299082.
