@@ -1,6 +1,12 @@
 # ChangeLog for dev-java/icu4j
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/icu4j/ChangeLog,v 1.50 2010/08/01 13:50:58 hwoarang Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/icu4j/ChangeLog,v 1.51 2010/12/11 18:02:01 caster Exp $
+
+*icu4j-4.4.2 (11 Dec 2010)
+
+  11 Dec 2010; Vlastimil Babka <caster@gentoo.org> -icu4j-4.4.1.ebuild,
+  +icu4j-4.4.2.ebuild:
+  Version bump, bug #339526.
 
   01 Aug 2010; Markos Chandras <hwoarang@gentoo.org> icu4j-4.4.1.1.ebuild:
   Stable on amd64 wrt bug #329867
